--- a/index.html
+++ b/index.html
@@ -8,20 +8,158 @@
     <meta name="description" content="Tienda de plantas pequeñas para el hogar y macetas con diseños creativos. Si es lo que buscas, ¡Artemisa Plant Shop es el lugar correcto!">
     <meta name="keywords" content="SHOP, PLANTS, TIENDA, PLANTAS, ARTEMISA, PLANT">
     <link rel="icon" type="image/svg" href="/assets/img/planta.svg">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Rubik&display=swap" rel="stylesheet">
     <title>Artemisa Plant Shop</title>
+    <style>
+        :root {
+            --primary-font: 'Rubik', sans-serif;
+            --second-font: 'Montserrat', sans-serif;
+        }
+        html {
+            font-family: var(--primary-font);
+        }
+        p {
+            font-family: var(--second-font);
+        }
+    </style>
 </head>
 <body>
-    <nav>
-
-    </nav>
-    <header>
-        
+    <header class="header__container">
+        <nav class="navbar__container">
+            <ul>
+                <li><a href="./index.html">Artemisa Plant Shop</a></li>
+                <li><a href="./pages/conoceme.html">Conóceme</a></li>
+            </ul>
+        </nav>
+        <h1 class="header__title">
+            Artemisa Plant Shop
+        </h1>
+        <p class="header__text--action"><span><</span>Scroll down for more</p>
     </header>
     <main>
-
+        <section>
+            <blockquote>
+                <p>
+                    <span>
+                        "Green in started as a small community of..."
+                    </span>
+                    <p>by Founder</p>
+                    <p>Juliana</p>
+                </p>
+            </blockquote>
+        </section>
+        <section>
+            <img src="" alt="">
+            <h2>Need help to chooseing the right plant</h2>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum, dolor.
+            </p>
+            <div class="container__carousel">
+                <div class="container__carousel--garden">
+                    <h3>01</h3>
+                    <p>Garden</p>
+                </div>
+                <div class="container__carousel--office">
+                    <h3>02</h3>
+                    <p>Office</p>
+                </div>
+                <div class="container__carousel--home">
+                    <h3>03</h3>
+                    <p>Home</p>
+                </div>
+            </div>
+        </section>
+        <section class="parent">
+            <section class="div1">
+                <h2>Here goes a titel about...</h2>
+                <p><span>|</span>Check out all...<span>-></span></p>
+            </section>
+            <section class="div2">
+                <img src="" alt="">
+                <h3></h3>
+                <p></p>
+            </section>
+            <section class="div3">
+                <img src="" alt="">
+                <h3></h3>
+                <p></p>
+            </section>
+            <section class="div4">
+                <img src="" alt="">
+                <h3></h3>
+                <p></p>
+            </section>
+        </section>
+        <section class="parent">
+            <div class="div1">
+                <h2>JUST FOLLOW OUR STEPS AND GET EVEYTHING</h2>
+            </div>
+            <div class="div2">
+                <span>01</span>
+                <h3>Choose plants</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam, impedit.</p>
+            </div>
+            <div class="div3">
+                <span>02</span>
+                <h3>Place an order</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam, impedit.</p>
+            </div>
+            <div class="div4">
+                <span>03</span>
+                <h3>Get plants delivered</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam, impedit.</p>
+            </div>
+            <div class="div5">
+                <h2>Concept</h2>
+            </div>
+            <div class="div6">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis, cupiditate?
+                </p>
+            </div>
+        </section>
     </main>
-    <footer>
-
+    <footer class="parent">
+        <div class="div1">
+            <p>Conctact us</p>
+            <ul>
+                <li>00 11 586 359</li>
+                <li>info@artemisaplantshop.com</li>
+            </ul>
+        </div>
+        <div class="div2">
+            <p>Address</p>
+            <ul>
+                <li>21 Norte2 Av. 18 Este Cúcuta, North Santander</li>
+            </ul>
+        </div>
+        <div class="div3">
+            <p>Plants</p>
+            <ul>
+                <li><a href="http://" target="_blank" rel="noopener noreferrer">Accesories</a></li>
+                <li><a href="http://" target="_blank" rel="noopener noreferrer">Workshop</a></li>
+                <li><a href="http://" target="_blank" rel="noopener noreferrer">Consultancy</a></li>
+            </ul>
+        </div>
+        <div class="div4">
+            <p>About us</p>
+            <ul>
+                <li><a href="http://" target="_blank" rel="noopener noreferrer">Blog</a></li>
+                <li><a href="http://" target="_blank" rel="noopener noreferrer">FAQ</a></li>
+            </ul>
+        </div>
+        <div class="div5">
+            <p>Follow us</p>
+            <ul>
+                <li><a href="http://" target="_blank" rel="noopener noreferrer">Fb</a></li>
+                <li><a href="http://" target="_blank" rel="noopener noreferrer">Tw</a></li>
+                <li><a href="http://" target="_blank" rel="noopener noreferrer">Ig</a></li>
+                <li><a href="http://" target="_blank" rel="noopener noreferrer">Yt</a></li>
+            </ul>
+        </div>
+        <div class="div6">
+            © 2021 artemisaplantshop.com
+        </div>
     </footer>
 </body>
 </html>
