--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Juliana Herendia">
+    <meta name="author" content="Juliana Heredia">
     <meta name="description" content="Tienda de plantas pequeñas para el hogar y macetas con diseños creativos. Si es lo que buscas, ¡Artemisa Plant Shop es el lugar correcto!">
     <meta name="keywords" content="SHOP, PLANTS, TIENDA, PLANTAS, ARTEMISA, PLANT">
     <link rel="icon" type="image/svg" href="/assets/img/planta.svg">
