--- a/index.html
+++ b/index.html
@@ -4,160 +4,111 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mobile First</title>
-    <link href=“https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap” rel=“stylesheet”>
+    <title>Artemisa Plant Shop</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Rubik&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/tablet.css" media="(min-width: 930px)">
 </head>
 <body>
     <header>
-        <img src="./assets/img/logo.svg" alt="">
+        <img src="./assets/img/artemisa-plant-shop.png" alt="Artemisa Plant Shop">
         <div class="header__title--container">
-            <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
-            <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
-            <a href="#plans" class="header__button">Conoce nuestros planes. <span></span> </a>
+            <h1>La próxima revolución de plantitas con diseños cute</h1>
+            <p>Encuentra aquí las plantas que más te gusten y macetas con diseños súper bonitos.</p>
+            <a href="#plans" class="header__button">Scroll down for more<span></span> </a>
         </div>
     </header>
     <main>
         <section class="main__exchange--container">
             <div class="background__img"></div>
             <div class="main__exchange--container-title">
-                <h2>Visibilizamos todas las tasas de cambio.</h2>
-                <p>Traemos información en tiempo real de las casa de cambio y las monedas más importante del mundo.</p>
-            </div>
-            <section class="main__tables--slider">
-                <div class="main__currency--table">
-                    <p class="currency--table-title">Monedas</p>
-                    <div class="currency--table-container">
-                        <table>
-                            <tr>
-                                <td class="table__top--left">Bitcoin</td>
-                                <td class="table__top--right table__right">$ 1.96 <span class="down"></span></td>
-                            </tr>
-                            <tr>
-                                <td>Ethereum</td>
-                                <td class="table__right">$ 0.07 <span class="up"></span></td>
-                            </tr>
-                            <tr>
-                                <td>Ripple</td>
-                                <td class="table__right">$ 2.15 <span class="down"></span></td>
-                            </tr>
-                            <tr>
-                                <td class="table__bottom--left">Stellar</td>
-                                <td class="table__bottom--right table__right">$ 4.96 <span class="down"></span></td>
-                            </tr>
-                        </table>
-                    </div>
-                    <div class="currency--table-date">
-                        <p> <b>Actualizado:</b> 19 de julio 23:45</p>
-                    </div>
+                <h2>Green in started as a small community of students who came toguether to revive the world's greenery, and now we are engaged in business to achieve more goals.</h2>
+                <p>by Founder</p>
+                <div class="currency--table-container--text-color">
+                    <p>Juliana</p>
                 </div>
-                <div class="main__commissions--table">
-                    <p class="commissions--table-title">Comisiones</p>
-                    <div class="commissions--table-container">
-                        <table>
-                            <tr>
-                                <td class="table__top--left">Bitrade</td>
-                                <td class="table__top--right table__right">$ 12.96</td>
-                            </tr>
-                            <tr>
-                                <td>Bitpreco</td>
-                                <td class="table__right">$ 13.07</span></td>
-                            </tr>
-                            <tr>
-                                <td>Novadax</td>
-                                <td class="table__right">$ 13.15</td>
-                            </tr>
-                            <tr>
-                                <td class="table__bottom--left">Coinext</td>
-                                <td class="table__bottom--right table__right">$ 14.96</td>
-                            </tr>
-                        </table>
-                    </div>
-                    <div class="commissions--table-date">
-                        <p> <b>Actualizado:</b> 19 de julio 23:48</p>
-                    </div>
+            </div>
+            <section class="main__exchange--container">
+                <div class="background__img-second"></div>
+                <div class="main__exchange--container-title-dos">
+                    <h2>Need help to chooseing the right plant.</h2>
+                <p>Integer quis auctor elit sed vulputate mi sit amet. Lorem ipsum dolor sit amet.</p>
                 </div>
             </section>
+            </div>
         </section>
         <section class="main__product--detail">
-            <span class="product--detail-batata-logo"></span>
-            <div class="product--detail-title">
-                <h2>Creamos un producto sin comparación.</h2>
-                <p>Confiable y diseñado para su uso diario.</p>
-            </div>
             <section class="product--cards-container">
                 <article class="product--detail-card">
-                    <span class="icon clock"></span>
-                    <p class="product--card-title">Tiempo real</p>
-                    <p class="product--card-body">Nuestra API toma información minuto a minuto sobre las tasas que más determinan el comportamiento.</p>
+                    <p class="product--card-title">01</p>
+                    <p class="product--card-body">Garden</p>
                 </article>
                 <article class="product--detail-card">
-                    <span class="icon eye"></span>
-                    <p class="product--card-title">No hay tazas escondidas</p>
-                    <p class="product--card-body">Ni en la compra o al momento de exit, Batabit siempre te muestra el costo real de lo que estás adquiriendo.</p>
+                    <p class="product--card-title">02</p>
+                    <p class="product--card-body">Office</p>
                 </article>
                 <article class="product--detail-card">
-                    <span class="icon dollar"></span>
-                    <p class="product--card-title">Compara monedas</p>
-                    <p class="product--card-body">No más rumores, con Batabit sabrás el valor real de cada moneda en el mercado actual.</p>
-                </article>
-                <article class="product--detail-card">
-                    <span class="icon checked"></span>
-                    <p class="product--card-title">Información confiable</p>
-                    <p class="product--card-body">Nuestras fuentes están 100% verificadas y continuamos auditando su contenido mientras se actualiza.</p>
+                    <p class="product--card-title">03</p>
+                    <p class="product--card-body">Home</p>
                 </article>
             </section>
         </section>
         <section class="bitcoin__img--container">
             <h2>
-                Conócelo hoy.
+                Lleva la tuya hoy.
             </h2>
         </section>
         <section id="plans" class="main__plans--container">
             <div class="plans--title">
-                <h2>Escoge el plan que mejor se ajuste a ti.</h2>
-                <p>Cualquier plan te da acceso completo a nuestra plataforma.</p>
+                <h2>Just follow our steps and get everything and get everything</h2>
             </div>
             <section class="plans__container--slider">
                 <article class="plans__container--card">
+                    <p class="recommended">01</p>
                     <div class="plan__info--container">
-                        <h3 class="plan__card--title">Pago Trimestral</h3>
-                        <p class="plan__card--price"> <span>$</span> 54</p>
-                        <p class="plan__card--saving">*Ahorras $129 comparado al plan mensual</p>
-                        <button class="plan__card--ca">Escoger este <span></span></button>
+                        <h3 class="plan__card--title">Choose plants</h3>
+                        <p class="plan__card--saving">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, doloremque!</p>
                     </div>
                 </article>
                 <article class="plans__container--card">
-                    <p class="recommended">Recomendado</p>
+                    <p class="recommended">02</p>
                     <div class="plan__info--container">
-                        <h3 class="plan__card--title">Pago Anual</h3>
-                        <p class="plan__card--price"> <span>$</span> 99</p>
-                        <p class="plan__card--saving">*Ahorras $129 comparado al plan mensual</p>
-                        <button class="plan__card--ca">Escoger este <span></span></button>
+                        <h3 class="plan__card--title">Place an order</h3>
+                        <p class="plan__card--saving">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, doloremque!</p>
                     </div>
                 </article>
                 <article class="plans__container--card">
+                    <p class="recommended">03</p>
                     <div class="plan__info--container">
-                        <h3 class="plan__card--title">Pago Mensual</h3>
-                        <p class="plan__card--price"> <span>$</span> 27</p>
-                        <p class="plan__card--saving">*Ahorras $129 comparado al plan mensual</p>
-                        <button class="plan__card--ca">Escoger este <span></span></button>
+                        <h3 class="plan__card--title">Get plants delivered</h3>
+                        <p class="plan__card--saving">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, doloremque!</p>
                     </div>
                 </article>
             </section>
+        </section>
+        <section class="main__plans--container">
+            <div class="plans--title-two">
+                <h2>Concept</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Est ad atque ex distinctio magni quibusdam sequi beatae fugiat quod voluptatibus cum nulla architecto voluptas in repellat, voluptatum aliquid aspernatur temporibus!
+                </p>
+            </div>
         </section>
     </main>
     <footer>
         <section class="left">
             <ul>
                 <li><a href="#">Linkedin</a></li>
-                <li><a href="#">Crunchbase</a></li>
-                <li><a href="#">Hackernews</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Yt</a></li>
             </ul>
         </section>
         <section class="right">
-            <img src="./assets/img/logo-footer.svg" alt="Logo de Batatabit 2020">
+            <ul>
+                <li><a href="#">Fb</a></li>
+                <li><a href="#">Tw</a></li>
+                <li><a href="https://www.instagram.com/julianaamiau/">Ig</a></li>
+            </ul>
         </section>
     </footer>
 </body>
