--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header>
         <img src="./assets/img/artemisa-plant-shop.png" alt="Artemisa Plant Shop">
         <div class="header__title--container">
-            <h1>La próxima revolución de plantitas con diseños cute</h1>
-            <p>Encuentra aquí las plantas que más te gusten y macetas con diseños súper bonitos.</p>
+            <h1>Encuentra aquí las plantas que más te gusten y macetas con diseños creativos.</h1>
+            <p>Artemisa es un nuevo sendero para las plantitas y sus diseños</p>
             <a href="#plans" class="header__button">Scroll down for more<span></span> </a>
         </div>
     </header>
