--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 </head>
 <body>
     <header>
-        <img src="./assets/img/artemisa-plant-shop.png" alt="Artemisa Plant Shop">
+        <nav class="navbar__container">
+            <ul>
+                <li><a href="./index.html"><span>A</span> Artemisa Plant Shop</a></li>
+            </ul>
+        </nav>
         <div class="header__title--container">
             <h1>Encuentra aquí las plantas que más te gusten y macetas con diseños creativos</h1>
             <p>Artemisa es un nuevo sendero para las plantitas y sus diseños</p>
