--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="header__title--container">
             <h1>Encuentra aquí las plantas que más te gusten y macetas con diseños creativos</h1>
             <p>Artemisa es un nuevo sendero para las plantitas y sus diseños</p>
-            <a href="#plans" class="header__button">Scroll down for more<span></span> </a>
+            <a href="#plans" class="header__button"><span></span>Scroll down for more</a>
         </div>
     </header>
     <main>
