add css desktop title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/svg" href="/assets/img/planta.svg">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Rubik&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="./css/tablet.css" media="(min-width: 930px)">
+    <link rel="stylesheet" href="./css/tablet.css" media="(min-width: 1316px)">
 </head>
 <body>
     <header>
@@ -21,10 +21,11 @@
             </ul>
         </nav>
         <div class="header__title--container">
+            <div class="background__img--title"></div>
             <h1>Encuentra aquí las plantas que más te gusten y macetas con diseños creativos</h1>
             <p>Artemisa es un nuevo sendero para las plantitas y sus diseños</p>
             <a href="#plans" class="header__button"><span></span>Scroll down for more</a>
-        </div>
+            </div>
     </header>
     <main>
         <section class="main__exchange--container">
