section two and background desk

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/svg" href="/assets/img/planta.svg">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Rubik&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="./css/tablet.css" media="(min-width: 1316px)">
+    <link rel="stylesheet" href="./css/desktop.css" media="(min-width: 1316px)">
 </head>
 <body>
     <header>
