--- a/index.html
+++ b/index.html
@@ -31,11 +31,7 @@
         <section class="main__exchange--container">
             <div class="background__img"></div>
             <div class="main__exchange--container-title">
-                <h2>Green in started as a small community of students who came toguether to revive the world's greenery, and now we are engaged in business to achieve more goals.</h2>
-                <p>by Founder</p>
-                <div class="currency--table-container--text-color">
-                    <p>Juliana</p>
-                </div>
+                <h2>Somos una empresa dedicada la jardinería y venta de plantas ornamentales. Iniciamos este proyecto para transmitir nuestro amor hacia las plantas.Lo que se vive con la naturaleza es un proceso reciproco, con ella es dar y recibir, es muy grato verlas crecer y la compañía maravillosa que hace de nuestro hogar un espacio con el aire mas puro y ambiente mas agradable.</h2>
             </div>
             <section class="main__exchange--container">
                 <div class="background__img-second"></div>
