--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
             <div class="background__img"></div>
             <div class="main__exchange--container-title">
                 <h2>Somos una empresa dedicada la jardinería y venta de plantas ornamentales. Iniciamos este proyecto para transmitir nuestro amor hacia las plantas.Lo que se vive con la naturaleza es un proceso reciproco, con ella es dar y recibir, es muy grato verlas crecer y la compañía maravillosa que hace de nuestro hogar un espacio con el aire mas puro y ambiente mas agradable.</h2>
+                <p></p>
+                <div class="currency--table-container--text-color">
+                    <p></p>
+                </div>
             </div>
             <section class="main__exchange--container">
                 <div class="background__img-second"></div>
