--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section class="main__exchange--container">
             <div class="background__img"></div>
             <div class="main__exchange--container-title">
-                <h2>Somos una empresa dedicada la jardinería y venta de plantas ornamentales. Iniciamos este proyecto para transmitir nuestro amor hacia las plantas. <br> Lo que se vive con la naturaleza es un proceso reciproco, con ella es dar y recibir, es muy grato verlas crecer y la compañía maravillosa que hace de nuestro hogar un espacio con el aire mas puro y ambiente mas agradable.</h2>
+                <h2>Somos una empresa dedicada la jardinería y venta de plantas ornamentales. Iniciamos este proyecto para transmitir nuestro amor hacia las plantas. <br> Lo que se vive con la naturaleza es un proceso recíproco, con ella es dar y recibir, es muy grato verlas crecer y la compañía maravillosa que hace de nuestro hogar un espacio con el aire mas puro y ambiente mas agradable.</h2>
                 <p></p>
                 <div class="currency--table-container--text-color">
                     <p></p>
