add sections and fix styles responsive

--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
 </head>
 <body>
     <header>
-        <nav class="navbar__container">
-            <ul>
-                <li><a href="./index.html"><span>A</span> Artemisa Plant Shop</a></li>
-            </ul>
+        <nav class="navbar__container scrollmenu">
+            <a href="./index.html">Inicio</a></li> 
+            <a href="./pages/cuidados-y-tips.html" target="_blank" rel="noopener noreferrer">Cuidados y tips</a>
+            <a href="./pages/about.html">Conóceme</a></li>
+            <a href="https://twitter.com/jhoncarlosam" target="_blank" rel="noopener noreferrer">Contacto</a>
         </nav>
         <div class="header__title--container">
             <div class="background__img--title"></div>
-            <h1>Encuentra aquí las plantas que más te gusten y macetas con diseños creativos</h1>
-            <p>Artemisa es un nuevo sendero para las plantitas y sus diseños</p>
-            <a href="#plans" class="header__button"><span></span>Scroll down for more</a>
+            <h1>Artemisa Plant Shop</h1>
+            <p>Encuentra aquí las plantas que más te gusten y macetas con diseños creativos</p>
+            <a href="#plans" class="header__button"><span></span>Desliza abajo para más</a>
             </div>
     </header>
     <main>
