--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,10 +16,10 @@
 <body>
     <header>
         <nav class="navbar__container scrollmenu">
-            <a href="./index.html">Inicio</a></li> 
-            <a href="./pages/cuidados-y-tips.html" target="_blank" rel="noopener noreferrer">Cuidados y tips</a>
+            <a href="./index.html">Inicio</a></li>  
+            <a href="./pages/cuidados-y-tips.html">Cuidados y tips</a>
             <a href="./pages/about.html">Conóceme</a></li>
-            <a href="https://twitter.com/jhoncarlosam" target="_blank" rel="noopener noreferrer">Contacto</a>
+            <a href="./pages/contacto.html">Contacto</a>
         </nav>
         <div class="header__title--container">
             <div class="background__img--title"></div>
@@ -108,16 +108,16 @@
     <footer>
         <section class="left">
             <ul>
-                <li><a href="#">Linkedin</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Yt</a></li>
+                <li><a href="index.html">Artemisa Plant Shop © 2021</a></li>
+                <li><a href="https://wa.me/573203999636">Whatsapp</a></li>
             </ul>
         </section>
         <section class="right">
             <ul>
-                <li><a href="#">Fb</a></li>
-                <li><a href="#">Tw</a></li>
-                <li><a href="https://www.instagram.com/julianaamiau/">Ig</a></li>
+                <li><a href="https://web.facebook.com/Artemisa-Plant-Shop-107380508358430">Facebook</a></li>
+                <li>
+                    <a href="https://www.instagram.com/artemisa.plantshop/" target="_blank" rel="noopener noreferrer">Instagram</a>
+                </li>
             </ul>
         </section>
     </footer>
