fix section nav contact

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,10 +11,10 @@
 <body>
     <header>
         <nav class="navbar__container scrollmenu">
-            <a href="./index.html">Inicio</a></li> 
-            <a href="./pages/cuidados-y-tips.html">Cuidados y tips</a>
-            <a href="./pages/about.html">Conóceme</a></li>
-            <a href="./pages/contacto.html">Contacto</a>
+            <a href="../index.html">Inicio</a></li> 
+            <a href="../pages/cuidados-y-tips.html">Cuidados y tips</a>
+            <a href="../pages/about.html">Conóceme</a></li>
+            <a href="../pages/contacto.html">Contacto</a>
         </nav>
     </header>
     <footer>
