--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -17,14 +17,14 @@
             <a href="../pages/contacto.html">Contacto</a>
         </nav>
     </header>
+    <main>
+        <p>
+            Compra plantas en línea y recibe tu pedido en casa o en el destino que elijas entre 2 y 5 días hábiles después de concretar la compra. Hacemos envíos a todo Colombia o si estás en Cúcuta puedes visitarnos en nuestro showroom ubicado en la calle 26B # 70-93 (Barrio Caobos) y recoger tu pedido sin costo adicional.
+        </p>
+    </main>
     <footer>
         <section class="left">
             <ul>
-                <li>
-                    <a href="#">
-                        Compra plantas en línea y recibe tu pedido en casa o en el destino que elijas entre 2 y 5 días hábiles después de concretar la compra. Hacemos envíos a todo Colombia o si estás en Medellín puedes visitarnos en nuestro showroom ubicado en la calle 26B # 70-93 (Belén Rosales) y recoger tu pedido sin costo adicional.
-                    </a>
-                </li>
                 <li><a href="index.html">Artemisa Plant Shop © 2021</a></li>
                 <li><a href="https://wa.me/573203999636">Whatsapp</a></li>
             </ul>
