--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./css/desktop.css" media="(min-width: 1316px)">
 </head>
 <body>
-    <header>
+    <header class="background__header">
         <nav class="navbar__container scrollmenu">
             <a href="./index.html">Inicio</a></li>  
             <a href="./pages/cuidados-y-tips.html">Cuidados y tips</a>
@@ -22,7 +22,7 @@
             <a href="./pages/contacto.html">Contacto</a>
         </nav>
         <div class="header__title--container">
-            <div class="background__img--title"></div>
+            
             <h1>Artemisa Plant Shop</h1>
             <p>Encuentra aquí las plantas que más te gusten y macetas con diseños creativos</p>
             <a href="#plans" class="header__button"><span></span>Desliza abajo para más</a>
