add text landing page

--- a/index.html
+++ b/index.html
@@ -22,11 +22,15 @@
             <a href="./pages/contacto.html">Contacto</a>
         </nav>
         <div class="header__title--container">
-            
             <h1>Artemisa Plant Shop</h1>
             <p>Encuentra aquí las plantas que más te gusten y macetas con diseños creativos</p>
             <a href="#plans" class="header__button"><span></span>Desliza abajo para más</a>
+        </div>
+        <!--
+            <div class="credits">
+                Photo by <a href="https://unsplash.com/@fredmarriage?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">freddie marriage</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
             </div>
+        -->
     </header>
     <main>
         <section class="main__exchange--container">
@@ -41,8 +45,7 @@
             <section class="main__exchange--container">
                 <div class="background__img-second"></div>
                 <div class="main__exchange--container-title-dos">
-                    <h2>Need help to chooseing the right plant.</h2>
-                <p>Integer quis auctor elit sed vulputate mi sit amet. Lorem ipsum dolor sit amet.</p>
+                    <h2>¿Necesitas ayuda para escoger la planta correcta?</h2>
                 </div>
             </section>
             </div>
@@ -51,15 +54,15 @@
             <section class="product--cards-container">
                 <article class="product--detail-card">
                     <p class="product--card-title">01</p>
-                    <p class="product--card-body">Garden</p>
+                    <p class="product--card-body">Jardín</p>
                 </article>
                 <article class="product--detail-card">
                     <p class="product--card-title">02</p>
-                    <p class="product--card-body">Office</p>
+                    <p class="product--card-body">Oficina</p>
                 </article>
                 <article class="product--detail-card">
                     <p class="product--card-title">03</p>
-                    <p class="product--card-body">Home</p>
+                    <p class="product--card-body">Hogar</p>
                 </article>
             </section>
         </section>
@@ -70,28 +73,28 @@
         </section>
         <section id="plans" class="main__plans--container">
             <div class="plans--title">
-                <h2>Just follow our steps and get everything and get everything</h2>
+                <h2>Adquiere tu planta favorita siguiendo estos sencillos pasos.</h2>
             </div>
             <section class="plans__container--slider">
                 <article class="plans__container--card">
                     <p class="recommended">01</p>
                     <div class="plan__info--container">
-                        <h3 class="plan__card--title">Choose plants</h3>
-                        <p class="plan__card--saving">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, doloremque!</p>
+                        <h3 class="plan__card--title">Escoge la planta</h3>
+                        <p class="plan__card--saving">Puedes encontrar nuestra variedad de plantas y macetas en nuestra cuenta de Instagram.</p>
                     </div>
                 </article>
                 <article class="plans__container--card">
                     <p class="recommended">02</p>
                     <div class="plan__info--container">
-                        <h3 class="plan__card--title">Place an order</h3>
-                        <p class="plan__card--saving">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, doloremque!</p>
+                        <h3 class="plan__card--title">Contáctanos</h3>
+                        <p class="plan__card--saving">Pide tu orden vía <a href="https://www.instagram.com/artemisa.plantshop/" target="_blank" rel="noopener noreferrer">DM</a> o <a href="https://wa.me/573203999636" target="_blank" rel="noopener noreferrer">Whatsapp</a>, nos encargaremos de brindarte la mejor atención.</p>
                     </div>
                 </article>
                 <article class="plans__container--card">
                     <p class="recommended">03</p>
                     <div class="plan__info--container">
-                        <h3 class="plan__card--title">Get plants delivered</h3>
-                        <p class="plan__card--saving">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, doloremque!</p>
+                        <h3 class="plan__card--title">Obtén tu planta</h3>
+                        <p class="plan__card--saving">Despues de concretar la compra la planta llega hasta la puerta de tu casa.<br>¡Así de fácil!</p>
                     </div>
                 </article>
             </section>
@@ -117,6 +120,9 @@
                 <li><a href="https://web.facebook.com/Artemisa-Plant-Shop-107380508358430">Facebook</a></li>
                 <li>
                     <a href="https://www.instagram.com/artemisa.plantshop/" target="_blank" rel="noopener noreferrer">Instagram</a>
+                </li>
+                <li>
+                    Photo by <a href="https://unsplash.com/@fredmarriage?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">freddie marriage</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
                 </li>
             </ul>
         </section>
