--- a/index.html
+++ b/index.html
@@ -33,8 +33,14 @@
         -->
     </header>
     <main>
+        <section class="main__product--detail-main">
+            <section class="product--cards-container-main">
+                <img src="./assets/img/planta-3.jpg" alt="">
+                <img src="./assets/img/planta-1.jpg" alt="">
+                <img src="./assets/img/planta-2.jpg" alt="">
+            </section>
+        </section>
         <section class="main__exchange--container">
-            <div class="background__img"></div>
             <div class="main__exchange--container-title">
                 <h2>Somos una empresa dedicada la jardinería y venta de plantas ornamentales. Iniciamos este proyecto para transmitir nuestro amor hacia las plantas. <br> Lo que se vive con la naturaleza es un proceso recíproco, con ella es dar y recibir, es muy grato verlas crecer y la compañía maravillosa que hace de nuestro hogar un espacio con el aire mas puro y ambiente mas agradable.</h2>
                 <p></p>
@@ -101,9 +107,11 @@
         </section>
         <section class="main__plans--container">
             <div class="plans--title-two">
-                <h2>Concept</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Est ad atque ex distinctio magni quibusdam sequi beatae fugiat quod voluptatibus cum nulla architecto voluptas in repellat, voluptatum aliquid aspernatur temporibus!
+                <h2>Conóceme mejor</h2>
+                <p class="plans__about--text">
+                    <a href="./pages/about.html">
+                        Mi nombre es Kelly Juliana Heredia y junto a mi compañera Rossana Martínez iniciamos este emprendimiento con el fin de mostrar al mundo nuestra pasión por la naturaleza...
+                    </a>
                 </p>
             </div>
         </section>
