--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <header class="background__header">
         <nav class="navbar__container scrollmenu">
             <a href="./index.html">Inicio</a></li>  
-            <a href="./pages/cuidados-y-tips.html">Cuidados y tips</a>
-            <a href="./pages/about.html">Conóceme</a></li>
-            <a href="./pages/contacto.html">Contacto</a>
+            <a href="#">Cuidados y tips</a>
+            <a href="#"">Conóceme</a></li>
+            <a href="#">Contacto</a>
         </nav>
         <div class="header__title--container">
             <h1>Artemisa Plant Shop</h1>
@@ -35,9 +35,9 @@
     <main>
         <section class="main__product--detail-main">
             <section class="product--cards-container-main">
-                <img src="./assets/img/planta-3.jpg" alt="">
-                <img src="./assets/img/planta-1.jpg" alt="">
-                <img src="./assets/img/planta-2.jpg" alt="">
+                <img src="./assets/img/planta-3.jpg" alt="Planta">
+                <img src="./assets/img/planta-1.jpg" alt="Planta">
+                <img src="./assets/img/planta-2.jpg" alt="Planta">
             </section>
         </section>
         <section class="main__exchange--container">
