add section cuidados y tips

--- a/pages/cuidados-y-tips.html
+++ b/pages/cuidados-y-tips.html
@@ -5,8 +5,83 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cuidados y tips</title>
+    <link rel="icon" type="image/svg" href="/assets/img/planta.svg">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Rubik&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/desktop.css" media="(min-width: 1316px)">
 </head>
 <body>
-    
+    <header class="background__header">
+        <nav class="navbar__container scrollmenu">
+            <a href="../index.html">Inicio</a></li>  
+            <a href="./cuidados-y-tips.html">Cuidados y tips</a>
+            <a href="./about.html"">Conóceme</a></li>
+            <a href="./contacto.html">Contacto</a>
+        </nav>
+        <div class="header__title--container">
+            <h1>Cuidados y tips</h1>
+            <p>Sabemos que hay distintas especies que se acomodan mejor a un ambiente que otro y que requieren más cuidado que otras, te invitamos a leer y elegir la mejor planta según tus disponibilidades.</p>
+        </div>
+    </header>
+    <main>
+        <article class="article__section">
+            <section class="product--cards-container">
+                <a href="./pages/cuidados-y-tips.html">
+                    <article class="product--detail-card">
+                        <p class="product--card-title">01</p>
+                        <p class="product--card-body">Jardín</p>
+                    </article>
+                </a>
+            </section>
+            <p>
+                Un jardín ofrece un paisaje incomparable al hogar. Escogiendo plantas de poco mantenimiento, que sean resistentes a los cambios de temperatura y de gran belleza, podrás tener un jardín excepcional que no signifique una gran inversión económica ni de tu tiempo.
+            </p>
+        </article>
+        <article class="article__section-inverted">
+            <section class="product--cards-container">
+                <a href="./pages/cuidados-y-tips.html">
+                    <article class="product--detail-card">
+                        <p class="product--card-title">02</p>
+                        <p class="product--card-body">Oficina</p>
+                    </article>
+                </a>
+            </section>
+            <p>
+                No podemos evitar pasar tanto tiempo en la oficina pero lo que sí podemos hacer es escoger cómo y de qué estamos rodeados. ¿Puede haber mejor compañía que una bonita planta? Nosotros te recomendamos las cintas y las suculentas.
+            </p>
+        </article>
+        <article class="article__section">
+            <section class="product--cards-container">
+                <a href="./pages/cuidados-y-tips.html">
+                    <article class="product--detail-card">
+                        <p class="product--card-title">03</p>
+                        <p class="product--card-body">Hogar</p>
+                    </article>
+                </a>
+            </section>
+            <p>
+                Colocar plantas en casa nos ayuda no sólo a respirar un aire más limpio, también a mejorar nuestro estado de ánimo y nuestra salud. Algunas de nuestras favoritas para tener en casa son los cactus y los bonsáis.
+            </p>
+        </article>
+    </main>
+    <footer>
+        <section class="left">
+            <ul>
+                <li><a href="index.html">Artemisa Plant Shop © 2021</a></li>
+                <li><a href="https://wa.me/573203999636">Whatsapp</a></li>
+            </ul>
+        </section>
+        <section class="right">
+            <ul>
+                <li><a href="https://web.facebook.com/Artemisa-Plant-Shop-107380508358430">Facebook</a></li>
+                <li>
+                    <a href="https://www.instagram.com/artemisa.plantshop/" target="_blank" rel="noopener noreferrer">Instagram</a>
+                </li>
+                <li>
+                    Photo by <a href="https://unsplash.com/@fredmarriage?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">freddie marriage</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+                </li>
+            </ul>
+        </section>
+    </footer>
 </body>
 </html>
