--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <header class="background__header">
         <nav class="navbar__container scrollmenu">
             <a href="./index.html">Inicio</a></li>  
-            <a href="#">Cuidados y tips</a>
-            <a href="#"">Conóceme</a></li>
-            <a href="#">Contacto</a>
+            <a href="./pages/cuidados-y-tips.html">Cuidados y tips</a>
+            <a href="./pages/about.html"">Conóceme</a></li>
+            <a href="./pages/contacto.html">Contacto</a>
         </nav>
         <div class="header__title--container">
             <h1>Artemisa Plant Shop</h1>
@@ -58,18 +58,24 @@
         </section>
         <section class="main__product--detail">
             <section class="product--cards-container">
-                <article class="product--detail-card">
-                    <p class="product--card-title">01</p>
-                    <p class="product--card-body">Jardín</p>
-                </article>
-                <article class="product--detail-card">
-                    <p class="product--card-title">02</p>
-                    <p class="product--card-body">Oficina</p>
-                </article>
-                <article class="product--detail-card">
-                    <p class="product--card-title">03</p>
-                    <p class="product--card-body">Hogar</p>
-                </article>
+                <a href="./pages/cuidados-y-tips.html">
+                    <article class="product--detail-card">
+                        <p class="product--card-title">01</p>
+                        <p class="product--card-body">Jardín</p>
+                    </article>
+                </a>
+                <a href="./pages/cuidados-y-tips.html">
+                    <article class="product--detail-card">
+                        <p class="product--card-title">02</p>
+                        <p class="product--card-body">Oficina</p>
+                    </article>
+                </a>
+                <a href="./pages/cuidados-y-tips.html">
+                    <article class="product--detail-card">
+                        <p class="product--card-title">03</p>
+                        <p class="product--card-body">Hogar</p>
+                    </article>
+                </a>
             </section>
         </section>
         <section class="bitcoin__img--container">
