inhabilitando links en desarrollo

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <nav class="navbar__container scrollmenu">
             <a href="./index.html">Inicio</a></li>  
             <a href="./pages/cuidados-y-tips.html">Cuidados y tips</a>
-            <a href="./pages/about.html"">Conóceme</a></li>
-            <a href="./pages/contacto.html">Contacto</a>
+            <a href="#">Conóceme</a></li>
+            <a href="#">Contacto</a>
         </nav>
         <div class="header__title--container">
             <h1>Artemisa Plant Shop</h1>
@@ -115,7 +115,7 @@
             <div class="plans--title-two">
                 <h2>Conóceme mejor</h2>
                 <p class="plans__about--text">
-                    <a href="./pages/about.html">
+                    <a href="#">
                         Mi nombre es Kelly Juliana Heredia y junto a mi compañera Rossana Martínez iniciamos este emprendimiento con el fin de mostrar al mundo nuestra pasión por la naturaleza...
                     </a>
                 </p>
