--- a/index.html
+++ b/index.html
@@ -26,15 +26,10 @@
             <p>Encuentra aquí las plantas que más te gusten y macetas con diseños creativos</p>
             <a href="#plans" class="header__button"><span></span>Desliza abajo para más</a>
         </div>
-        <!--
-            <div class="credits">
-                Photo by <a href="https://unsplash.com/@fredmarriage?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">freddie marriage</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-            </div>
-        -->
     </header>
     <main>
-        <section class="main__product--detail-main">
-            <section class="product--cards-container-main">
+        <section class="main__carousel--container">
+            <section class="carousel__container scrollmenu">
                 <img src="./assets/img/planta-3.jpg" alt="Planta">
                 <img src="./assets/img/planta-1.jpg" alt="Planta">
                 <img src="./assets/img/planta-2.jpg" alt="Planta">
