fix responsive && add credits readme

--- a/pages/cuidados-y-tips.html
+++ b/pages/cuidados-y-tips.html
@@ -31,7 +31,7 @@
                     <p class="product--card-body">Jardín</p>
                 </article>
             </section>
-            <p>
+            <p class="article__section--text">
                 Un jardín ofrece un paisaje incomparable al hogar. Escogiendo plantas de poco mantenimiento, que sean resistentes a los cambios de temperatura y de gran belleza, podrás tener un jardín excepcional que no signifique una gran inversión económica ni de tu tiempo.
             </p>
         </article>
@@ -42,7 +42,7 @@
                     <p class="product--card-body">Oficina</p>
                 </article>
             </section>
-            <p>
+            <p class="article__section--text">
                 No podemos evitar pasar tanto tiempo en la oficina pero lo que sí podemos hacer es escoger cómo y de qué estamos rodeados. ¿Puede haber mejor compañía que una bonita planta? Nosotros te recomendamos las cintas y las suculentas.
             </p>
         </article>
@@ -53,7 +53,7 @@
                     <p class="product--card-body">Hogar</p>
                 </article>
             </section>
-            <p>
+            <p class="article__section--text">
                 Colocar plantas en casa nos ayuda no sólo a respirar un aire más limpio, también a mejorar nuestro estado de ánimo y nuestra salud. Algunas de nuestras favoritas para tener en casa son los cactus y los bonsáis.
             </p>
         </article>
@@ -70,9 +70,6 @@
                 <li><a href="https://web.facebook.com/Artemisa-Plant-Shop-107380508358430">Facebook</a></li>
                 <li>
                     <a href="https://www.instagram.com/artemisa.plantshop/" target="_blank" rel="noopener noreferrer">Instagram</a>
-                </li>
-                <li>
-                    Photo by <a href="https://unsplash.com/@fredmarriage?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">freddie marriage</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
                 </li>
             </ul>
         </section>
