--- a/pages/cuidados-y-tips.html
+++ b/pages/cuidados-y-tips.html
@@ -15,7 +15,7 @@
         <nav class="navbar__container scrollmenu">
             <a href="../index.html">Inicio</a></li>  
             <a href="./cuidados-y-tips.html">Cuidados y tips</a>
-            <a href="#"">Conóceme</a></li>
+            <a href="./about.html"">Conóceme</a></li>
             <a href="#">Contacto</a>
         </nav>
         <div class="header__title--container">
