--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="navbar__container scrollmenu">
             <a href="./index.html">Inicio</a></li>  
             <a href="./pages/cuidados-y-tips.html">Cuidados y tips</a>
-            <a href="#">Conóceme</a></li>
+            <a href="./pages/about.html">Conóceme</a></li>
             <a href="#">Contacto</a>
         </nav>
         <div class="header__title--container">
@@ -110,7 +110,7 @@
             <div class="plans--title-two">
                 <h2>Conóceme mejor</h2>
                 <p class="plans__about--text">
-                    <a href="#">
+                    <a href="./pages/about.html">
                         Mi nombre es Kelly Juliana Heredia y junto a mi compañera Rossana Martínez iniciamos este emprendimiento con el fin de mostrar al mundo nuestra pasión por la naturaleza...
                     </a>
                 </p>
